# fuzzy-logic-implementation

./: README.md  fuzzy_logic.py  pyproject.toml
test/: test.py
